Поправлены пути, добавлена возможность взятия изображения из кеша

--- a/templates/app.html
+++ b/templates/app.html
@@ -1,1 +1,2 @@
-<img src="https://http.cat/{{status}}">
+<!-- <img src="https://http.cat/{{status}}"> -->
+<img src="data:image/png;base64, {{image}}" alt="{{status}}">
